# conversor_nominas_bancos_chile

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
conversor_nominas_bancos_chile/: bancos_codigos.json  bancos_headers_nomina.json  bank_functions.py  bank_tkinter.py  bank_tkinter_menu.py
conversor_nominas_bancos_chile/planillas_test/: datos_empresas.xlsx  input_nomina_bci_ejemplo.xls  input_nomina_bci_ejemplo_abasto_stdr.xlsx
